# serializer version: 1
# name: test_accent_exceptions
  list([
    list([
      'Ese',
      'ese',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hombre',
      'hombre',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'está',
      'estar',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'demente',
      'demente',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_accent_exceptions.1
  list([
    list([
      'automáticamente',
      'automático',
      True,
      'suffix_mente',
      'suffix',
      'automática',
      1,
    ]),
  ])
# ---
# name: test_accent_exceptions.2
  list([
    list([
      'mágicamente',
      'mágicamente',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_accent_exceptions.3
  list([
    list([
      'antirrevolucionariamente',
      'antirrevolucionario',
      True,
      'suffix_mente',
      'suffix',
      'antirrevolucionaria',
      1,
    ]),
  ])
# ---
# name: test_split_on_all
  list([
    list([
      'Cuénta',
      'contar',
      'NOUN',
      'NOUN',
      True,
      'suffix_melo',
      'suffix',
      'Cuenta',
      2,
    ]),
    list([
      'me',
      'me',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'lo',
      'lo',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'bien',
      'bien',
      'ADV',
      'ADV',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'y',
      'y',
      'CCONJ',
      'CCONJ',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'di',
      'decir',
      'NOUN',
      'NOUN',
      True,
      'suffix_lo',
      'suffix',
      'di',
      1,
    ]),
    list([
      'lo',
      'lo',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'claro',
      'claro',
      'ADJ',
      'ADJ',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      ',',
      ',',
      'PUNCT',
      'PUNCT',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'no',
      'no',
      'ADV',
      'ADV',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'me',
      'yo',
      'PRON',
      'PRON',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'des',
      'des',
      'ADP',
      'ADP',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'un',
      'uno',
      'DET',
      'DET',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'caramelo',
      'caramelo',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      'PUNCT',
      'PUNCT',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_all.1
  list([
    list([
      'Yo',
      'yo',
      'PRON',
      'PRON',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'misma',
      'mismo',
      'NOUN',
      'NOUN',
      True,
      'suffix_mente',
      'suffix',
      'misma',
      1,
    ]),
    list([
      'mente',
      'mente',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'podría',
      'poder',
      'AUX',
      'AUX',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hacér',
      'hacer',
      'NOUN',
      'NOUN',
      True,
      'suffix_selo',
      'suffix',
      'hacer',
      2,
    ]),
    list([
      'se',
      'se',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'lo',
      'lo',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'despac',
      'despacio',
      'NOUN',
      'NOUN',
      True,
      'suffix_ito',
      'suffix',
      'despacio',
      1,
    ]),
    list([
      'ito',
      'ito',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      'PUNCT',
      'PUNCT',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_all.2
  list([
    list([
      'Soy',
      'ser',
      'AUX',
      'AUX',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hispano',
      'hispano',
      'NOUN',
      'NOUN',
      True,
      'prefix_hispano',
      'prefix',
      'americano',
      1,
    ]),
    list([
      'americano',
      'americano',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'y',
      'y',
      'CCONJ',
      'CCONJ',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'antirrevolucionario',
      'antirrevolucionario',
      'ADJ',
      'ADJ',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      'PUNCT',
      'PUNCT',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_all.3
  list([
    list([
      'Di',
      'decir',
      'NOUN',
      'NOUN',
      True,
      'suffix_me',
      'suffix',
      'Di',
      1,
    ]),
    list([
      'me',
      'me',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'el',
      'el',
      'DET',
      'DET',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'número',
      'número',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'de',
      'de',
      'ADP',
      'ADP',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'teléfono',
      'teléfono',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      'PUNCT',
      'PUNCT',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_all.4
  list([
    list([
      'Hay',
      'haber',
      'AUX',
      'AUX',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'que',
      'que',
      'SCONJ',
      'SCONJ',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hacér',
      'hacer',
      'NOUN',
      'NOUN',
      True,
      'suffix_selo',
      'suffix',
      'hacer',
      2,
    ]),
    list([
      'se',
      'se',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'lo',
      'lo',
      'NOUN',
      'NOUN',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'todo',
      'todo',
      'PRON',
      'PRON',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      'PUNCT',
      'PUNCT',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_verbs
  list([
    list([
      'Cuénta',
      'contar',
      True,
      'suffix_melo',
      'suffix',
      'Cuenta',
      2,
    ]),
    list([
      'me',
      'me',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'lo',
      'lo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'bien',
      'bien',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'y',
      'y',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'di',
      'decir',
      True,
      'suffix_lo',
      'suffix',
      'di',
      1,
    ]),
    list([
      'lo',
      'lo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'claro',
      'claro',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      ',',
      ',',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'no',
      'no',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'me',
      'yo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'des',
      'des',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'un',
      'uno',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'caramelo',
      'caramelo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_verbs.1
  list([
    list([
      'Yo',
      'yo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'mismamente',
      'mismo',
      True,
      'suffix_mente',
      'suffix',
      'misma',
      1,
    ]),
    list([
      'podría',
      'poder',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hacér',
      'hacer',
      True,
      'suffix_selo',
      'suffix',
      'hacer',
      2,
    ]),
    list([
      'se',
      'se',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'lo',
      'lo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'despacito',
      'despacio',
      True,
      'suffix_ito',
      'suffix',
      'despacio',
      1,
    ]),
    list([
      '.',
      '.',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_verbs.2
  list([
    list([
      'Soy',
      'ser',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hispanoamericano',
      'hispanoamericano',
      True,
      'prefix_hispano',
      'prefix',
      'americano',
      1,
    ]),
    list([
      'y',
      'y',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'antirrevolucionario',
      'antirrevolucionario',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_verbs.3
  list([
    list([
      'Di',
      'decir',
      True,
      'suffix_me',
      'suffix',
      'Di',
      1,
    ]),
    list([
      'me',
      'me',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'el',
      'el',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'número',
      'número',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'de',
      'de',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'teléfono',
      'teléfono',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
# name: test_split_on_verbs.4
  list([
    list([
      'Hay',
      'haber',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'que',
      'que',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'hacér',
      'hacer',
      True,
      'suffix_selo',
      'suffix',
      'hacer',
      2,
    ]),
    list([
      'se',
      'se',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'lo',
      'lo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      'todo',
      'todo',
      False,
      None,
      None,
      None,
      0,
    ]),
    list([
      '.',
      '.',
      False,
      None,
      None,
      None,
      0,
    ]),
  ])
# ---
